fixed slider on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,14 @@ body {
   0% { opacity: 0; transform: scale(0.8) }
   100% { opacity: 1; transform: scale(1) }
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#team-horizontal-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#team-horizontal-scroll {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
